--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style_mod2.css">
+<link rel="stylesheet" href="style_mod2_assignment.css">
 
 <title>MODULE 2 ASSIGNMENT</title>
 
